--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "browserslist": "last 10 versions, not dead",
   "scripts": {
     "watch:parcel": "parcel src/index.html",
-    "build:parcel": "parcel build src/index.html",
+    "build:parcel": "parcel build src/template.html"
+,
     "init-index-local": "node builder/init.js --local",
     "init-index-remote": "node builder/init.js --remote",
     "watch": "npm-run-all init-index-local watch:parcel",
